--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
   },
+  "eslintConfig": {
+    "extends":"./node_modules/standard/eslintrc.json"
+  },
   "devDependencies": {
-    "eslint": "^8.38.0",
-    "eslint-config-google": "^0.14.0"
+
+    "standard": "^17.0.0"
   }
 }
