--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
   },
   "homepage": "https://github.com/juandejunin/remind-pay-nodejs#readme",
   "dependencies": {
-    "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "express": "^4.18.2"
   },
   "eslintConfig": {
-    "extends":"./node_modules/standard/eslintrc.json"
+    "extends": "./node_modules/standard/eslintrc.json"
   },
   "devDependencies": {
-
+    "dotenv": "^16.0.3",
+    "nodemon": "^2.0.22",
     "standard": "^17.0.0"
   }
 }
