feat:add database in index

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/juandejunin/remind-pay-nodejs#readme",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3"
   },
   "eslintConfig": {
     "extends": "./node_modules/standard/eslintrc.json"
